--- a/4.30/User/index.html
+++ b/4.30/User/index.html
@@ -5,12 +5,11 @@
     <title>User</title>
     <link rel="stylesheet" type="text/css" href="css/common.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
-    <script type="text/javascript" src="js/libs/modernizr.min.js"></script>
 </head>
 <body>
 <div class="topbar-wrap white">
     <div class="topbar-inner clearfix">
-        <div class="topbar-logo-wrap clearfix">
+        <div class="topbar-logo-wrap clear">
             <ul class="navbar-list clearfix">
                 <li><a class="on" href="index.html">Home</a></li>
                 <li><a href="../index.html" target="_blank">ChinaKnow</a></li>
@@ -19,7 +18,7 @@
 
     </div>
 </div>
-<div class="container clearfix">
+<div class="container clear">
     <div class="sidebar-wrap">
         <div class="sidebar-title">
            <a href="#"> <img src="images/avatar.jpg"/> </a>
@@ -27,16 +26,16 @@
         <div class="sidebar-content">
             <ul class="sidebar-list">
                 <li>
-                    <a href="#"><i class="icon-font">&#xe003;</i>Management</a>
+                    <a href="index.html"><i class="icon-font">&#xe003;</i>Management</a>
                     <ul class="sub-menu">
-                        <li><a href="post-design.html">My Post</a></li>
-                        <li><a href="post-design.html">My Comment</a></li>
+                        <li><a href="mypost.html">My Post</a></li>
+                        <li><a href="mycomment.html">My Comment</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#"><i class="icon-font">&#xe018;</i>Information</a>
                     <ul class="sub-menu">
-                        <li><a href="tag-design.html">More</a></li>
+                        <li><a href="identity.html">Modify</a></li>
                     </ul>
                 </li>
             </ul>
