--- a/4.30/article1.html
+++ b/4.30/article1.html
@@ -5,10 +5,8 @@
 <title>index</title>
 </head>
 <script type="text/javascript"> 
-document.location("article.php");
+document.location("article1.php");
 </script> 
 <body>
-</body> 
-
 </body>
 </html>
