--- a/4.30/forum.html
+++ b/4.30/forum.html
@@ -8,7 +8,6 @@
 document.location("forum.php");
 </script> 
 <body>
-</body> 
-<script type="text/javascript" src="../getUserName.php"></script> 
+<script type="text/javascript" src="getUserName.php"></script>
 </body>
 </html>
