--- a/4.30/post-create.html
+++ b/4.30/post-create.html
@@ -8,7 +8,7 @@
 document.location("post-create.php");
 </script> 
 <body>
-</body> 
-<script type="text/javascript" src="../getUserName.php"></script> 
+
+<script type="text/javascript" src="getUserName.php"></script>
 </body>
 </html>
