--- a/4.30/article2.html
+++ b/4.30/article2.html
@@ -5,10 +5,9 @@
 <title>index</title>
 </head>
 <script type="text/javascript"> 
-document.location("topic-create.php");
+document.location("article2.php");
 </script> 
 <body>
+</body> 
 
-<script type="text/javascript" src="getUserName.php"></script>
-</body>
 </html>
